fix: add tabs spacing

--- a/components/organisms/About/About.module.scss
+++ b/components/organisms/About/About.module.scss
@@ -34,4 +34,8 @@
       grid-column: 6/-1;
     }
   }
+
+  &__tabs-wrapper {
+    margin-top: rv(30);
+  }
 }
